First draft of model using Move,Cell and CellGroup

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     // tag::actuator[]
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    //compile('org.projectlombok:lombok:1.16.6')
+    compile('org.projectlombok:lombok:1.16.6')
     // end::actuator[]
     // tag::tests[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
